fix jittering of ui due to rating section stretching

--- a/client/src/app/components/BLOCK/rating-subsection/rating-subsection.component.scss
+++ b/client/src/app/components/BLOCK/rating-subsection/rating-subsection.component.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;   
     padding: 3px 12px;
-    min-width: 140px;
+    width: 160px;
 }
 
 p {
